# mls-platform-api

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  mls-lite.h  mls-lite.rs  rustfmt.toml
.cargo/: config.toml
mls-lite/: Cargo.toml
mls-lite-bis/: Cargo.toml
mls-lite-bis/src/: lib.rs
mls-lite/src/: lib.rs
mls-platform-api/: .gitignore  Cargo.toml
mls-platform-api/src/: helpers.rs  json.rs  lib.rs  main.rs  more.rs  state.rs
sqlite/: alice  bob
src/: lib.rs  main.rs  more.rs  state.rs  stateless.rs
tests/: clear_pending_commit.rs  group_add.rs  group_close.rs  group_create.rs  group_join.rs  group_propose_add.rs  group_propose_remove.rs  group_remove.rs  group_update.rs  main.rs  send_receive.rs
uniffi-bindgen/: Cargo.toml
