[package]
name = "mls-platform-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
gecko = ["mls-rs-crypto-nss/gecko"]

[dependencies]
mls-rs =  {git = "https://github.com/beurdouche/mls-rs", rev = "eedb37e50e3fca51863f460755afd632137da57c", features = ["sqlcipher-bundled", "serde"] }
mls-rs-crypto-nss = {git = "https://github.com/beurdouche/mls-rs", rev = "eedb37e50e3fca51863f460755afd632137da57c"}
mls-rs-provider-sqlite = {git = "https://github.com/beurdouche/mls-rs", rev = "eedb37e50e3fca51863f460755afd632137da57c"}
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["alloc", "derive", "rc"] }
bincode = "1.3"
sha2 = "^0.10"
thiserror = "1"
serde_json = "1.0.114"
