[package]
name = "mls-lite"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-headers"
required-features = ["headers"] # Do not build unless generating headers.

[features]
headers = ["safer-ffi/headers", "safer-ffi-gen/headers"]

[dependencies]
mls-rs = { version = "0.37.0", features = ["ffi"] }
mls-rs-core = { version = "0.17.0", features = ["ffi"] }
mls-rs-crypto-openssl = "0.8.0"
safer-ffi = "0.1.3"
safer-ffi-gen = "0.9.2"
