[package]
name = "mls-lite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "mls_lite"

[features]
default = ["uniffi"]
uniffi = ["dep:uniffi", "mls-rs/uniffi", "mls-rs-core/uniffi"]

[dependencies]
mls-rs = "0.38"
mls-rs-core = "0.17.1"
mls-rs-crypto-openssl = "0.8.0"
thiserror = "1.0.57"
uniffi = { version = "0.26.0", optional = true }
