[package]
name = "mls-platform-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
gecko = ["mls-rs-crypto-nss/gecko"]

[dependencies]
mls-rs =  {git = "https://github.com/beurdouche/mls-rs", rev = "4611109cb5ff1afc89b52da3a05b3fb7c86e0e61", features = ["sqlcipher-bundled", "serde"] }
# mls-rs-core =  {git = "https://github.com/beurdouche/mls-rs", rev = "4611109cb5ff1afc89b52da3a05b3fb7c86e0e61"}
mls-rs-crypto-nss = {git = "https://github.com/beurdouche/mls-rs", rev = "4611109cb5ff1afc89b52da3a05b3fb7c86e0e61"}
mls-rs-provider-sqlite = {git = "https://github.com/beurdouche/mls-rs", rev = "4611109cb5ff1afc89b52da3a05b3fb7c86e0e61"}
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["alloc", "derive", "rc"] }
bincode = "1.3"
sha2 = "^0.10"
thiserror = "1"
serde_json = "1.0.114"
